--- a/Group1_Assignment2_report.Rmd
+++ b/Group1_Assignment2_report.Rmd
@@ -254,7 +254,6 @@ table1 <- tibble(
     "grasses (includes grasses, meadows), woods (includes woods, leaves), urban (includes paths, urban), waste"
   )
 )
-
 table1 %>%
   kbl(format = "html", caption = "Predictors in the dataset.") %>% 
   kable_styling("striped") 
@@ -269,19 +268,16 @@ The data set is partitioned into a training and test set.  The training data set
 ```{r test and train} 
 # set seed 
 set.seed(191)
-
 # test and train
 n <- nrow(mushrooms)
 mushrooms_split <- 
   mushrooms %>% 
   mutate(split = sample(rep(c("train", "test"), 
          times = c(round(.8*n), round(.2*n)))))
-
 mushrooms_train <- 
   mushrooms_split %>% 
   filter(split == "train") %>%
   dplyr::select(-split)
-
 mushrooms_test  <- 
   mushrooms_split %>% 
   filter(split == "test") %>%
@@ -294,12 +290,10 @@ beginner <-
   mushrooms %>% 
   dplyr::select(class, cap.shape, cap.color, bruises, gill.color, 
                 stalk.shape, ring.number, population, habitat)
-
 beginner_train <- 
   mushrooms_train %>% 
   dplyr::select(class, cap.shape, cap.color, bruises, gill.color, 
                 stalk.shape, ring.number, population, habitat)
-
 beginner_test  <- 
   mushrooms_test %>% 
   dplyr::select(class, cap.shape, cap.color, bruises, gill.color,
@@ -319,15 +313,13 @@ For this reason we apply a variable selection technique which compares different
 
 As our main metric to choose the set of predictors we use the balanced accuracy $$\frac{\text{Sensitivity} + \text{Specificity}}{2}$$, but adjust it a little bit to put more emphasis on avoiding false positives (that is, to avoid classifying a mushroom as edible when it is poisonous). This is due to the real-life risk of misclassification: eating a poisonous mushroom causes more harm than not eating an edible mushroom. For this sake, we are willing to misclassify more edible mushrooms as poisonous than vice-versa. Therefore, our choice of evaluation metric is a weighted balanced accuracy, where we give more weight to specificity as this should decrease the false negative rate: $$\frac{\text{Sensitivity} + 1.5*\text{Specificity}}{2.5}$$.
 
-For this selection of predictors we also wanted to test different thresholds for classifying a probability based on the given model as edible or poisonous. Therefore, we applied different thresholds and choose for each set of predictors the threshold were our chosen metric has its maximum value. 
+In order to not rely on chance in our selection we applied 5-fold cross-validation and averaged the results over the folds. In this way we obtained the best subset of predictors as well as the corresponding threshold value based on the training set. We use the baseline threshold in all models
 
-In order to not rely on chance in our selection we applied 5-fold cross-validation and averaged the results over the folds. In this way we obtained the best subset of predictors as well as the corresponding threshold value based on the training set. 
-
-Next we applied cross-validation again to compare the performance first on the training set between the different candidate models and also evaluated the performance on the test set. 
-
-For these comparisons we took the accuracy and our chosen metric into account.
+Next we applied cross-validation again to compare the performance first on the training set between the different candidate models and also evaluated the performance on the test set. For these comparisons we took the our chosen metric into account.
 
 We believe that we identified the best set of predictors based on the training data and that in this way we are also able to make a decision on how many predictors are actually necessary to get a satisfying performance. 
+
+The flow chart below shows the steps taken to obtain a final model.
 
 ```{r}
 grViz(diagram = "digraph flowchart {
@@ -336,14 +328,17 @@ grViz(diagram = "digraph flowchart {
   tab2 [label = '@@2']
   tab3 [label = '@@3']
   tab4 [label = '@@4']
+  tab5 [label = '@@5']
   
-  tab1 -> tab2 -> tab3 -> tab4;
+  tab2 -> tab3 -> tab4 -> tab5
+  tab1 -> tab3;
 }
   
-  [1]: '5-fold cross validation'
-  [2]: 'Run a LR for all formulas'  
-  [3]: 'Obtain metrics for different thresholds'  
-  [4]: 'Take the mean of the best metrics for each formula'
+  [1]: 'A formula is generated for each possible combinations of predictors'
+  [2]: 'The training data is split up into 5 sets for crossvalidation' 
+  [3]: 'A logistic regression model is fit 5 times for each formula'  
+  [4]: 'The mean of the metrics over these 5 models is caculated'
+  [5]: 'The best forumla is selected based on the highest mean'
 ")
 ```
 
@@ -365,13 +360,12 @@ generate_formulas <- function(p, x_vars, y_var) {
 ```
 
 ```{r}
-# Function to find best predictors and best alpha based on chosen metric (Balance from sens and spec with more weight for sens)
+# Function to find best predictors based on chosen metric (Balance from sens and spec with more weight for sens)
 # this formula should not be used for itself, but just in combination with the cross validation formula for finding the best predictors
 find_best_predictors <- function(formulas, train, valid, valid_y){
   
   out <- data.frame(matrix(nrow = length(formulas), ncol = 3))
   thres <- round(mean(train$class), 2)
-
   for(i in 1:length(formulas)){
     model <- glm(formulas[i], family=binomial, data=train)
     pred_prob <- predict(model, type = "response", newdata = valid)
@@ -434,12 +428,10 @@ cv_best_pred <- function(k, dataset, form, top){
   colnames(Final) <- c("Formula", "CV_Mean of TNR_TPR"," CV_alpha")
   return(Final[1:top,])
 }
-
 ```
 
 ```{r}
 # Cross validating the chosen model and compare it to other models
-
 cv_best_models <- function(k, dataset, form, alpha, seed){
   
   set.seed(seed)
@@ -486,7 +478,6 @@ cv_best_models <- function(k, dataset, form, alpha, seed){
 
 ```{r}
 # Training Set results from the chosen models
-
 test_metric <- function(formula, train, test,alpha){
   fit1 <- glm(formula, family=binomial, data=train)
   pred_prob <- predict(fit1, type = "response", newdata = test)
@@ -561,24 +552,20 @@ In the formulae above, TP reflects the number of true positives, TN reflects the
 
 ```{r}
 # Applying the formulas:
-
 mushrooms_begin_x <- beginner %>%
   dplyr::select(-class)
-
 # generating the combination of formulas
 formulas_2 <- generate_formulas(p=2,x_vars=mushrooms_begin_x, y_var="class")
 formulas_3 <- generate_formulas(p=3,x_vars=mushrooms_begin_x, y_var="class")
 formulas_4 <- generate_formulas(p=4,x_vars=mushrooms_begin_x, y_var="class")
 formulas_5 <- generate_formulas(p=5,x_vars=mushrooms_begin_x, y_var="class")
 formulas_6 <- generate_formulas(p=6,x_vars=mushrooms_begin_x, y_var="class")
-
 # generating the cross-validated results for the best choice of predictors
 pred2 <- cv_best_pred(5, beginner_train, formulas_2, 5)
 pred3 <- cv_best_pred(5, beginner_train, formulas_3, 5)
 pred4 <- cv_best_pred(5, beginner_train, formulas_4, 5)
 pred5 <- cv_best_pred(5, beginner_train, formulas_5, 5)
 pred6 <- cv_best_pred(5, beginner_train, formulas_6, 5)
-
 # comparing the results
 #rbind(pred2, pred3, pred4, pred5, pred6) %>%
   #mutate(n_pred = rep(2:6, each = 5)) %>%
@@ -591,7 +578,7 @@ pred6 <- cv_best_pred(5, beginner_train, formulas_6, 5)
 # All of these models would yield good results
 ```
 
-In table 3 we present winning combinations of predictors.  The combination of predictors with the highest weighted balanced accuracy across all levels of predictors is 5 predictors.  Therefore, we select the best combination of 5 predictors as our final set of predictors. 
+In Table 2 we present winning combinations of predictors. The combination of predictors with the highest weighted balanced accuracy across all levels of predictors is 6 predictors. However, the difference between 5 and 6 is so verylow. Since we would like to keep the model as simple as possible so that even beginners can eat mushrooms, we chose the model with the best combination of 5 predictors as our final set of predictors for simplicity reasons.
 
 ```{r}
 # comparison between models
@@ -603,7 +590,6 @@ res <-
     cv_best_models(5, beginner_train, pred5[1,1], pred5[1,3], 123), # this seems to be the best model
     cv_best_models(5, beginner_train, pred6[1,1], pred6[1,3], 123)
   ) 
-
 res %>%
   rename("Sensitivity" = CV_TPR, 
          "Specificity" = CV_TNR, 
@@ -676,7 +662,7 @@ rbind(
   row_spec(4, bold = T, background = "aliceblue")
 ```
 
-The table above shows the performance of all types of models for the best set of predictors. It appears XGBoost was the best model on all metrics of interest.
+Table 3 above shows the performance of all types of models for the best set of predictors. It appears XGBoost was the best model on all metrics of interest.
 
 ```{r}
 # calibration plots 
@@ -684,7 +670,6 @@ lr_prob <- predict(lr,  newdata = beginner_test, type = "response")
 dt_prob <- predict(dt,  newdata = beginner_test)
 xgb_prob<- predict(xgb, newdata = model.matrix(best_formula, beginner_test)[,-1])
 rf_prob <- predict(rf,  newdata = beginner_test)
-
 probs <- tibble(
   class = beginner_test$class, 
   lr    = lr_prob,
@@ -692,18 +677,19 @@ probs <- tibble(
   rf    = rf_prob,
   xg    = xgb_prob, 
 ) 
-
 probs %>%
   gather(key = "variable", value = "value", -class) %>% 
   ggplot(aes(x = value, y = class, color = variable, fill = variable)) + 
   geom_abline(slope = 1, intercept = 0, size = 1) +
   geom_smooth(method = stats::loess, se = TRUE) +
-  scale_fill_brewer(palette = "Set2",  labels=c("Decision Tree","Logistic Regression","Random Forest","XGBoost")) +
-  scale_color_brewer(palette = "Set2", labels=c("Decision Tree","Logistic Regression","Random Forest","XGBoost")) +
+  scale_x_continuous(breaks = seq(0, 1, 0.1)) +
+  scale_y_continuous(breaks = seq(0, 1, 0.1)) +
+  scale_fill_brewer(palette = "Set2") +
+  scale_color_brewer(palette = "Set2") +
   xlab("Estimated Probability") +
   ylab("Observed Proportion") +
   labs(color = "Model", fill = "Model") +
-  ggtitle("Flexible Calibration Curves") + 
+  ggtitle("Flexible Model Calibration") + 
   theme_minimal()
 ```
 
@@ -719,17 +705,24 @@ Additionally, we considered calibration. It appears logistic regression and rand
 
 ### 3.3.1 Logistic Regression 
 
-A benefit of performing logistic regression is that parameter estimates are interpretable.  **The final logistic model is:** class ~ cap.shape + bruises + stalk.shape + ring.number + habitat. The output of logistic regression is the log odds ratio, this is a metric which is hard to interpret. The odds ratio (OR) is easier to interpret and can be obtained by taking the exponent of the log odds ratio. If the odds ratio is larger (lower) than 1 then that group is associated with higher (lower) odds of the outcome. The output of the model, can be seen below. 
+A benefit of performing logistic regression is that parameter estimates are interpretable  **The final logistic model is:** class ~ cap.shape + bruises + stalk.shape + ring.number + habitat. The output of the model, can be seen below. There are insignificant predictors in all predictors, this can mainly be explained by the small number of observations in these predictor groups. The significant predictors will be discussed.
 
-```{r, echo  = F}
+```{r message= FALSE,  results='asis'}
 options(scipen = n)
 lr_final <- glm(pred5[1,1], family=binomial, data=beginner)
 lr_final_resuts <- summary(lr_final)
-
-stargazer(lr_final, odd.ratio = T, type = "text", single.row = TRUE)
+stargazer(lr_final, odd.ratio = T, type = "html",
+          dep.var.labels = "Posionious mushroom",
+          covariate.labels = c("Bell cap shape", " Sunken cap shape",
+                               "Flat cap shape", "Knobbed cap shape",
+                               "Conical cap shape", "No bruises",
+                               "Tapering stalk shape", "Two rings",
+                               "One ring", "Grass habitat",
+                               "Woods habitat", "Waste habitat"),
+          notes.align = "l")
 ```
 
-From the output we see that there are some insignificant comparisons in nearly all predictors.  For instance, the odds ratio between convex capshape and conical cap shape is not significantly different from one.  This can mainly be explained by the small number of observations in these subgroups (only 3 observations with a conical capshape). The significant comparisons are presented in the Table 4. 
+The output of logistic regression is the log odds ratio, this is a metric which is hard to interpret. The odds ratio (OR) is easier to interpret and can be obtained by taking the exponent of the log odds ratio. If the odds ratio is larger (lower) than 1 then that group is associated with higher (lower) odds of the outcome.
 
 ```{r}
 table3 <- tibble(
@@ -738,26 +731,36 @@ table3 <- tibble(
   `Catogorie` = c("bell", "flat", "knobbed", "false", "tapering", " two", "grasses", "woods"),
   `Odds Ratio` = c("3.9", "0.9", "0.4", "0.1", "2.6", " 8.5", "15.5", "6.9")
 )
-
 table3 %>%
   kbl(format = "html", caption = "Odd ratio's of significant predictors") %>% 
   kable_styling("striped") 
 ```
-As can be seen from the Table 4,  if a mushroom has a cap-shaped flat/knobbed or there are no bruises then the mushroom is associated with lower odds of being poisonous compared to their baseline groups. For mushrooms with bell cap shapes, stalk shapes that tare tapering, two rings and live in a grass or woods habitat they are associated with higher odds of being poisonous compared to their baseline groups.\
+As can be seen from the Table 4 above if a mushroom has a cap-shaped flat/knobbed or there are no bruises then the mushroom is associated with lower odds of being poisonous compared to their baseline groups. For mushrooms with bell cap shapes, stalk shapes that tare tapering, two rings and live in a grass or woods habitat they are associated with higher odds of being poisonous compared to their baseline groups.\
 
 ### 3.3.2 Decision Tree
-
-An advantage of using a decision tree is that this model is easy to explain.  Given that the end goal of our model development is to present information to hikers of all levels, a decision tree diagram is an excellent tool that can be repeated utilized by hikers without the need for any technology.  
-
 ```{r}
 rpart.plot(dt)
+```
+
+### 3.3.3 Random Forest
+```{r}
+tibble(
+  var = rownames(rf_importance),
+  imp = rf_importance
+)%>%
+  ggplot(aes(x = var, y = rf_importance)) +
+  geom_bar(stat = "identity", width = 0.05, fill = "skyblue")+
+  geom_point( col = "lightsalmon2", size = 3) + 
+  coord_flip() + 
+  xlab("Importance") +
+  ylab("Predictor") +
+  ggtitle("Importance of predictors from random forest model") + 
+  theme_minimal()
 ```
 
 
 # 4. Discussion
 
 We aimed to identify a model predicting mushroom edibility. We performed logistic regression to identify the best set of predictors, then compared the performance of logistic regression with tree-based methods. It appeared that XGBoost performed the best on the metrics of interest; additionally, it slightly underestimated the probability of a mushroom being edible, while other models were severely miscalibrated. We thus conclude that XGBoost is the best model.\
-\
-Our end goal was to develop an app that could be used by hikers.  As the basis for this app, we would recommend XGBoost.  Since the performance of the basic decision tree was not much worse than that of XGBoost, we can offer an alternative for hikers who wish to enjoy nature without technology by providing a print out of the decision tree. 
 
-
+**something something about the others having interpretability but xgboost has best performance**
