--- a/Group1_Assignment2_report.Rmd
+++ b/Group1_Assignment2_report.Rmd
@@ -317,17 +317,15 @@ rm(mushrooms, mushrooms_split, mushrooms_test, mushrooms_train)
 As mentioned in the introduction it is the goal of this assignment to make mushroom foraging available for everyone. This means that we need to test how many characteristics are needed to reach a satisfying level of accuracy, while avoiding overfitting. As we are beginners ourselves and we tried to identify some mushrooms based on the given characteristics we follow the credo of using the least amount of predictors as possible. 
 For this reason we apply a variable selection technique which compares different combinations of predictors on a chosen metric gives us the best set of predictors for our classification problem. 
 
-As our main metric to choose the set of predictors we use the balanced accuracy $$\frac{\text{Sensitivity} + \text{Specificity}}{2}$$, but adjust it a little bit to put more emphasis on avoiding false positives (that is, to avoid classifying a mushroom as edible when it is poisonous). This is due to the real-life risk of misclassification: eating a poisonous mushroom causes more harm than not eating an edible mushroom. For this sake, we are willing to misclassify more edible mushrooms as poisonous than vice-versa. Therefore, our choice of evaluation metric is a weighted balanced accuracy, where we give more weight to specificity as this should decrease the false negative rate: $$\frac{\text{Sensitivity} + 1.5*\text{Specificity}}{2.5}$$.
+As our main metric to choose the set of predictors we use the balanced accuracy: $$\frac{\text{Sensitivity} + \text{Specificity}}{2},$$ but adjust it a little bit to put more emphasis on avoiding false positives (that is, to avoid classifying a mushroom as edible when it is poisonous). This is due to the real-life risk of misclassification: eating a poisonous mushroom causes more harm than not eating an edible mushroom. For this sake, we are willing to misclassify more edible mushrooms as poisonous than vice-versa. Therefore, our choice of evaluation metric is a weighted balanced accuracy, where we give more weight to specificity as this should decrease the false negative rate: $$\frac{\text{Sensitivity} + 1.5*\text{Specificity}}{2.5}$$.
 
-For this selection of predictors we also wanted to test different thresholds for classifying a probability based on the given model as edible or poisonous. Therefore, we applied different thresholds and choose for each set of predictors the threshold were our chosen metric has its maximum value. 
+In order to not rely on chance in our selection we applied 5-fold cross-validation and averaged the results over the folds. In this way we obtained the best subset of predictors as well as the corresponding threshold value based on the training set. We use the baseline threshold in all models.
 
-In order to not rely on chance in our selection we applied 5-fold cross-validation and averaged the results over the folds. In this way we obtained the best subset of predictors as well as the corresponding threshold value based on the training set. 
-
-Next we applied cross-validation again to compare the performance first on the training set between the different candidate models and also evaluated the performance on the test set. 
-
-For these comparisons we took the accuracy and our chosen metric into account.
+Next we applied cross-validation again to compare the performance first on the training set between the different candidate models and also evaluated the performance on the test set. For these comparisons we took the our chosen metric into account.
 
 We believe that we identified the best set of predictors based on the training data and that in this way we are also able to make a decision on how many predictors are actually necessary to get a satisfying performance. 
+
+The flow chart below shows the steps taken to obtain a final model.
 
 ```{r}
 grViz(diagram = "digraph flowchart {
@@ -336,14 +334,17 @@ grViz(diagram = "digraph flowchart {
   tab2 [label = '@@2']
   tab3 [label = '@@3']
   tab4 [label = '@@4']
+  tab5 [label = '@@5']
   
-  tab1 -> tab2 -> tab3 -> tab4;
+  tab2 -> tab3 -> tab4 -> tab5
+  tab1 -> tab3;
 }
   
-  [1]: '5-fold cross validation'
-  [2]: 'Run a LR for all formulas'  
-  [3]: 'Obtain metrics for different thresholds'  
-  [4]: 'Take the mean of the best metrics for each formula'
+  [1]: 'A formula is generated for each possible combinations of predictors'
+  [2]: 'The training data is split up into 5 sets for crossvalidation' 
+  [3]: 'A logistic regression model is fit 5 times for each formula'  
+  [4]: 'The mean of the metrics is calculated over these 5 models'
+  [5]: 'The best formula is selected based on the highest mean'
 ")
 ```
 
@@ -365,7 +366,7 @@ generate_formulas <- function(p, x_vars, y_var) {
 ```
 
 ```{r}
-# Function to find best predictors and best alpha based on chosen metric (Balance from sens and spec with more weight for sens)
+# Function to find best predictors based on chosen metric (Balance from sens and spec with more weight for sens)
 # this formula should not be used for itself, but just in combination with the cross validation formula for finding the best predictors
 find_best_predictors <- function(formulas, train, valid, valid_y){
   
@@ -591,7 +592,7 @@ pred6 <- cv_best_pred(5, beginner_train, formulas_6, 5)
 # All of these models would yield good results
 ```
 
-In table 3 we present winning combinations of predictors.  The combination of predictors with the highest weighted balanced accuracy across all levels of predictors is 5 predictors.  Therefore, we select the best combination of 5 predictors as our final set of predictors. 
+In Table 2 we present winning combinations of predictors. The combination of predictors with the highest weighted balanced accuracy across all levels of predictors is 6 predictors. However, the difference between 5 and 6 is so very low. Since we would like to keep the model as simple as possible so that even beginners can eat mushrooms, we chose the model with the best combination of 5 predictors as our final set of predictors for simplicity reasons.
 
 ```{r}
 # comparison between models
@@ -676,7 +677,7 @@ rbind(
   row_spec(4, bold = T, background = "aliceblue")
 ```
 
-The table above shows the performance of all types of models for the best set of predictors. It appears XGBoost was the best model on all metrics of interest.
+Table 3 above shows the performance of all types of models for the best set of predictors. It appears XGBoost was the best model on all metrics of interest.
 
 ```{r}
 # calibration plots 
@@ -695,19 +696,18 @@ probs <- tibble(
 
 probs %>%
   gather(key = "variable", value = "value", -class) %>% 
-  ggplot(aes(x = value, y = class, color = variable, fill = variable)) + 
+  ggplot(aes(x = value, y = class, color = variable)) + 
   geom_abline(slope = 1, intercept = 0, size = 1) +
-  geom_smooth(method = stats::loess, se = TRUE) +
-  scale_fill_brewer(palette = "Set2",  labels=c("Decision Tree","Logistic Regression","Random Forest","XGBoost")) +
+  geom_smooth(method = stats::loess, se = F) +
   scale_color_brewer(palette = "Set2", labels=c("Decision Tree","Logistic Regression","Random Forest","XGBoost")) +
   xlab("Estimated Probability") +
   ylab("Observed Proportion") +
-  labs(color = "Model", fill = "Model") +
+  labs(color = "Model") +
   ggtitle("Flexible Calibration Curves") + 
   theme_minimal()
 ```
 
-Additionally, we considered calibration. It appears logistic regression and random forest were severely miscalibrated, while decision trees and XGboost tended to underestimate the probability of edibility. Underestimating edibility is more desirable than overestimating it, so we do not consider the slight underestimation of XGBoost to be a problem.
+Additionally, we considered calibration. A well calibrated model should fall along the line $y = x$.  It appears logistic regression and random forest were severely miscalibrated, while decision trees and XGboost tended to underestimate the probability of edibility. Underestimating edibility is more desirable than overestimating it, so we do not consider the slight underestimation of XGBoost to be a problem.
 
 ```{r}
 # check with package output 
@@ -721,21 +721,29 @@ Additionally, we considered calibration. It appears logistic regression and rand
 
 A benefit of performing logistic regression is that parameter estimates are interpretable.  **The final logistic model is:** class ~ cap.shape + bruises + stalk.shape + ring.number + habitat. The output of logistic regression is the log odds ratio, this is a metric which is hard to interpret. The odds ratio (OR) is easier to interpret and can be obtained by taking the exponent of the log odds ratio. If the odds ratio is larger (lower) than 1 then that group is associated with higher (lower) odds of the outcome. The output of the model, can be seen below. 
 
-```{r, echo  = F}
+```{r, message = F, results = 'asis'}
 options(scipen = n)
 lr_final <- glm(pred5[1,1], family=binomial, data=beginner)
 lr_final_resuts <- summary(lr_final)
 
-stargazer(lr_final, odd.ratio = T, type = "text", single.row = TRUE)
+stargazer(lr_final, odd.ratio = T, type = "html",
+          dep.var.labels = "Posionious mushroom",
+          covariate.labels = c("Bell cap shape", " Sunken cap shape",
+                               "Flat cap shape", "Knobbed cap shape",
+                               "Conical cap shape", "No bruises",
+                               "Tapering stalk shape", "Two rings",
+                               "One ring", "Grass habitat",
+                               "Woods habitat", "Waste habitat"),
+          notes.align = "l")
 ```
 
-From the output we see that there are some insignificant comparisons in nearly all predictors.  For instance, the odds ratio between convex capshape and conical cap shape is not significantly different from one.  This can mainly be explained by the small number of observations in these subgroups (only 3 observations with a conical capshape). The significant comparisons are presented in the Table 4. 
+From the output we see that there are some insignificant comparisons in nearly all predictors.  For instance, the odds ratio between convex capshape and conical cap shape is not significantly different from one.  This can mainly be explained by the small number of observations in these subgroups (only 3 observations with a conical capshape). The significant comparisons are presented in Table 4. 
 
 ```{r}
 table3 <- tibble(
   `Predictor/reference` = c("cap.shape / convex","cap.shape / convex","cap.shape / convex", "bruises / true",
                             "stalk.shape / enlarging", "ring.number / one", "habitat / Urban ", "habitat / Urban "),
-  `Catogorie` = c("bell", "flat", "knobbed", "false", "tapering", " two", "grasses", "woods"),
+  `Category` = c("bell", "flat", "knobbed", "false", "tapering", " two", "grasses", "woods"),
   `Odds Ratio` = c("3.9", "0.9", "0.4", "0.1", "2.6", " 8.5", "15.5", "6.9")
 )
 
@@ -743,11 +751,11 @@ table3 %>%
   kbl(format = "html", caption = "Odd ratio's of significant predictors") %>% 
   kable_styling("striped") 
 ```
-As can be seen from the Table 4,  if a mushroom has a cap-shaped flat/knobbed or there are no bruises then the mushroom is associated with lower odds of being poisonous compared to their baseline groups. For mushrooms with bell cap shapes, stalk shapes that tare tapering, two rings and live in a grass or woods habitat they are associated with higher odds of being poisonous compared to their baseline groups.\
+As can be seen from Table 4 above if a mushroom has a cap-shaped flat/knobbed or there are no bruises then the mushroom is associated with lower odds of being poisonous compared to their baseline groups. For mushrooms with bell cap shapes, stalk shapes that tare tapering, two rings and live in a grass or woods habitat they are associated with higher odds of being poisonous compared to their baseline groups.\
 
 ### 3.3.2 Decision Tree
 
-An advantage of using a decision tree is that this model is easy to explain.  Given that the end goal of our model development is to present information to hikers of all levels, a decision tree diagram is an excellent tool that can be repeated utilized by hikers without the need for any technology.  
+An advantage of using a decision tree is that this model is easy to explain.  Given that the end goal of our model development is to present information to hikers of all levels, a decision tree diagram is an excellent tool that can be repeatedly used by foragers.  
 
 ```{r}
 rpart.plot(dt)
@@ -758,6 +766,6 @@ rpart.plot(dt)
 
 We aimed to identify a model predicting mushroom edibility. We performed logistic regression to identify the best set of predictors, then compared the performance of logistic regression with tree-based methods. It appeared that XGBoost performed the best on the metrics of interest; additionally, it slightly underestimated the probability of a mushroom being edible, while other models were severely miscalibrated. We thus conclude that XGBoost is the best model.\
 \
-Our end goal was to develop an app that could be used by hikers.  As the basis for this app, we would recommend XGBoost.  Since the performance of the basic decision tree was not much worse than that of XGBoost, we can offer an alternative for hikers who wish to enjoy nature without technology by providing a print out of the decision tree. 
+Our end goal was to develop an app that could be used by foragers  As the basis for this app, we would recommend XGBoost.  Since the performance of the basic decision tree was not much worse than that of XGBoost, we can offer an alternative for hikers who wish to enjoy nature without technology by providing a print out of the decision tree. 
 
 
