--- a/Group1_Assignment2_report.Rmd
+++ b/Group1_Assignment2_report.Rmd
@@ -319,9 +319,9 @@ For this reason we apply a variable selection technique which compares different
 
 As our main metric to choose the set of predictors we use the balanced accuracy: $$\frac{\text{Sensitivity} + \text{Specificity}}{2},$$ but adjust it a little bit to put more emphasis on avoiding false positives (that is, to avoid classifying a mushroom as edible when it is poisonous). This is due to the real-life risk of misclassification: eating a poisonous mushroom causes more harm than not eating an edible mushroom. For this sake, we are willing to misclassify more edible mushrooms as poisonous than vice-versa. Therefore, our choice of evaluation metric is a weighted balanced accuracy, where we give more weight to specificity as this should decrease the false negative rate: $$\frac{\text{Sensitivity} + 1.5*\text{Specificity}}{2.5}$$.
 
-In order to not rely on chance in our selection we applied 5-fold cross-validation and averaged the results over the folds. In this way we obtained the best subset of predictors as well as the corresponding threshold value based on the training set. We use the baseline threshold in all models.
+In order to not rely on chance in our selection we applied 5-fold cross-validation and averaged the results over the folds. In this way we obtained the best subset of predictors based on the training set. We use the baseline threshold for classifying a mushroom as edible in all models.
 
-Next we applied cross-validation again to compare the performance first on the training set between the different candidate models and also evaluated the performance on the test set. For these comparisons we took the our chosen metric into account.
+Next we compared the selected models' performance on the training set, then evaluated the best model's performance on the test set. For these comparisons we took the weighted balanced accuracy into account.
 
 We believe that we identified the best set of predictors based on the training data and that in this way we are also able to make a decision on how many predictors are actually necessary to get a satisfying performance. 
 
@@ -592,7 +592,7 @@ pred6 <- cv_best_pred(5, beginner_train, formulas_6, 5)
 # All of these models would yield good results
 ```
 
-In Table 2 we present winning combinations of predictors. The combination of predictors with the highest weighted balanced accuracy across all levels of predictors is 6 predictors. However, the difference between 5 and 6 is so very low. Since we would like to keep the model as simple as possible so that even beginners can eat mushrooms, we chose the model with the best combination of 5 predictors as our final set of predictors for simplicity reasons.
+In Table 2 we present winning combinations of predictors. The combination of predictors with the highest weighted balanced accuracy across all levels of predictors is 6 predictors. However, the difference between 5 and 6 is very low. Since we would like to keep the model as simple as possible so that even beginners can successfully forage mushrooms, we chose the model with the best combination of 5 predictors as our final set of predictors.
 
 ```{r}
 # comparison between models
@@ -611,7 +611,7 @@ res %>%
          "WBAccuracy" =  CV_Metric)%>%
   mutate(Formula = c(pred2[1,1], pred3[1,1], pred4[1,1], pred5[1,1], pred6[1,1]))%>%
   dplyr::select(Formula, Sensitivity, Specificity, WBAccuracy) %>%
-  kbl(format = "html", caption = "Performance of the best set of predictors for 4, 5, 6 predictors.") %>% 
+  kbl(format = "html", caption = "Performance of the best set of predictors for 2-6 predictors.") %>% 
   kable_styling("striped")  %>% 
   row_spec(4, bold = T, background = "aliceblue")
 ```
@@ -719,7 +719,7 @@ Additionally, we considered calibration. A well calibrated model should fall alo
 
 ### 3.3.1 Logistic Regression 
 
-A benefit of performing logistic regression is that parameter estimates are interpretable.  **The final logistic model is:** class ~ cap.shape + bruises + stalk.shape + ring.number + habitat. The output of logistic regression is the log odds ratio, this is a metric which is hard to interpret. The odds ratio (OR) is easier to interpret and can be obtained by taking the exponent of the log odds ratio. If the odds ratio is larger (lower) than 1 then that group is associated with higher (lower) odds of the outcome. The output of the model, can be seen below. 
+A benefit of performing logistic regression is that parameter estimates can be interpreted. **The final logistic model is:** `class ~ cap.shape + bruises + stalk.shape + ring.number + habitat`. The output of logistic regression is the log odds ratio, this is a metric which is hard to interpret. The odds ratio (OR) is easier to interpret and can be obtained by taking the exponent of the log odds ratio. If the odds ratio is larger (lower) than 1 then that group is associated with higher (lower) odds of the outcome. The output of the model, can be seen below. 
 
 ```{r, message = F, results = 'asis'}
 options(scipen = n)
@@ -727,7 +727,7 @@ lr_final <- glm(pred5[1,1], family=binomial, data=beginner)
 lr_final_resuts <- summary(lr_final)
 
 stargazer(lr_final, odd.ratio = T, type = "html",
-          dep.var.labels = "Posionious mushroom",
+          dep.var.labels = "Edible mushroom",
           covariate.labels = c("Bell cap shape", " Sunken cap shape",
                                "Flat cap shape", "Knobbed cap shape",
                                "Conical cap shape", "No bruises",
@@ -751,7 +751,7 @@ table3 %>%
   kbl(format = "html", caption = "Odd ratio's of significant predictors") %>% 
   kable_styling("striped") 
 ```
-As can be seen from Table 4 above if a mushroom has a cap-shaped flat/knobbed or there are no bruises then the mushroom is associated with lower odds of being poisonous compared to their baseline groups. For mushrooms with bell cap shapes, stalk shapes that tare tapering, two rings and live in a grass or woods habitat they are associated with higher odds of being poisonous compared to their baseline groups.\
+As can be seen from Table 4 above if a mushroom has a cap-shaped flat/knobbed or there are no bruises then the mushroom is associated with lower odds of being poisonous compared to their baseline groups. For mushrooms with bell cap shapes, stalk shapes that tare tapering, two rings and live in a grass or woods habitat they are associated with higher odds of being poisonous compared to their baseline groups. However, while these numbers can be interpreted, they provide little valuable information to foragers as they are simply a comparison of mushrooms between themselves.\
 
 ### 3.3.2 Decision Tree
 
@@ -761,11 +761,14 @@ An advantage of using a decision tree is that this model is easy to explain.  Gi
 rpart.plot(dt)
 ```
 
+### 3.3.3 Random forest and XGboost
+
+A drawback of using these models is that, while generally being better classifiers than simple decision trees, they provide no interpretable parameters or plots that would be useful for foragers.
 
 # 4. Discussion
 
-We aimed to identify a model predicting mushroom edibility. We performed logistic regression to identify the best set of predictors, then compared the performance of logistic regression with tree-based methods. It appeared that XGBoost performed the best on the metrics of interest; additionally, it slightly underestimated the probability of a mushroom being edible, while other models were severely miscalibrated. We thus conclude that XGBoost is the best model.\
+We aimed to identify a model predicting mushroom edibility. We performed logistic regression to identify the best set of predictors, then compared the performance of logistic regression with tree-based methods. It appeared that XGBoost performed the best on the metrics of interest; additionally, it slightly underestimated the probability of a mushroom being edible, while most other models were severely miscalibrated. We thus conclude that XGBoost is the best model.\
 \
-Our end goal was to develop an app that could be used by foragers  As the basis for this app, we would recommend XGBoost.  Since the performance of the basic decision tree was not much worse than that of XGBoost, we can offer an alternative for hikers who wish to enjoy nature without technology by providing a print out of the decision tree. 
+Our end goal was to develop an app that could be used by foragers. As the basis for this app, we would recommend XGBoost. Since the performance of the basic decision tree was not much worse than that of XGBoost, we can offer an alternative for hikers who wish to enjoy nature without technology by providing a printout of the decision tree. 
 
 
